@@ -174,8 +174,8 @@
             "Dist::Zilla::Util::EmulatePhase" : "1.000001",
             "IO::Socket::SSL" : "1.997",
             "LWP::Protocol::https" : "6.06",
-            "Moose" : "2.1300",
-            "Moose::Util::TypeConstraints" : "2.1300",
+            "Moose" : "2.1211",
+            "Moose::Util::TypeConstraints" : "2.1211",
             "MooseX::AttributeShortcuts" : "0.024",
             "MooseX::Has::Sugar" : "1.000003",
             "MooseX::StrictConstructor" : "0.19",
@@ -346,8 +346,8 @@
          "LWP::Protocol::https" : "6.06",
          "Module::Build" : "0.4206",
          "Module::Metadata" : "1.000024",
-         "Moose" : "2.1300",
-         "Moose::Util::TypeConstraints" : "2.1300",
+         "Moose" : "2.1211",
+         "Moose::Util::TypeConstraints" : "2.1211",
          "MooseX::AttributeShortcuts" : "0.024",
          "MooseX::Has::Sugar" : "1.000003",
          "MooseX::StrictConstructor" : "0.19",
