@@ -81,8 +81,8 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Util::EmulatePhase" => "1.000001",
     "IO::Socket::SSL" => "1.997",
     "LWP::Protocol::https" => "6.06",
-    "Moose" => "2.1300",
-    "Moose::Util::TypeConstraints" => "2.1300",
+    "Moose" => "2.1211",
+    "Moose::Util::TypeConstraints" => "2.1211",
     "MooseX::AttributeShortcuts" => "0.024",
     "MooseX::Has::Sugar" => "1.000003",
     "MooseX::StrictConstructor" => "0.19",
@@ -201,8 +201,8 @@ my %FallbackPrereqs = (
   "LWP::Protocol::https" => "6.06",
   "Module::Build" => 0,
   "Module::Metadata" => "1.000024",
-  "Moose" => "2.1300",
-  "Moose::Util::TypeConstraints" => "2.1300",
+  "Moose" => "2.1211",
+  "Moose::Util::TypeConstraints" => "2.1211",
   "MooseX::AttributeShortcuts" => "0.024",
   "MooseX::Has::Sugar" => "1.000003",
   "MooseX::StrictConstructor" => "0.19",
